testsuite/tests/parser/should_fail/cmdFail006.stderr

cmdFail006.hs:4:15: error: [GHC-03790]
    Parse error in command: ~(_ -< _)
